objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent</relationshipLabel>
        <relationshipName>Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_s_Email__c</fullName>
        <description>Used in flow, Hollywood for the Holidays</description>
        <formula>Agent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <label>Holiday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Holiday</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hot_Rank__c</fullName>
        <description>How hot is the celebrity for Hollywood for the Holidays</description>
        <label>Hot Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The Princess Bride</fullName>
                </value>
                <value>
                    <fullName>Classic_Hollywood</fullName>
                    <label>Classic Hollywood</label>
                </value>
                <value>
                    <fullName>90s Sitcoms</fullName>
                </value>
                <value>
                    <fullName>Villains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Celebrity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>